Put the first paragraph in bold style

--- a/content/newsletter/004.md
+++ b/content/newsletter/004.md
@@ -5,7 +5,7 @@ tags:
 - news
 ---
 
-The International Virtual Observatory Alliance (IVOA) was formed in June 2002
+**The International Virtual Observatory Alliance (IVOA) was formed in June 2002
 with a mission to "facilitate the international coordination and collaboration
 necessary for the development and deployment of the tools, systems, and
 organizational structures necessary to enable the international utilization of
@@ -15,7 +15,7 @@ China, Europe, France, Germany, Hungary, India, Italy, Japan, Korea, Russia,
 Spain, the United Kingdom, and the United States. Membership is open to other
 national and international projects according to the IVOA Guidelines for
 Participation. You can read more about the IVOA and what we do at
-<http://www.ivoa.net/pub/info/>.
+<http://www.ivoa.net/pub/info/>.**
 
 ### What is the VO?
 
