--- a/content/newsletter/008.md
+++ b/content/newsletter/008.md
@@ -5,8 +5,7 @@ tags:
 - news
 ---
 
-
-The International Virtual Observatory Alliance (IVOA) was formed in June 2002
+**The International Virtual Observatory Alliance (IVOA) was formed in June 2002
 with a mission to facilitate the international coordination and collaboration
 necessary for the development and deployment of the tools, systems and
 organizational structures necessary to enable the international utilization of
@@ -16,7 +15,7 @@ Brazil, Canada, China, Europe, France, Germany, Hungary, India, Italy, Japan,
 Russia, Spain, Ukraine, the United Kingdom, and the United States and an
 inter-governmental organization (ESA). Membership is open to other national and
 international programs according to the IVOA Guidelines for Participation. You
-can read more about the IVOA and what we do at <http://www.ivoa.net/pub/info/>.
+can read more about the IVOA and what we do at <http://www.ivoa.net/pub/info/>.**
 
 ### What is the VO?
 
