Fix separator in newsletter editors list

--- a/content/newsletter/011.md
+++ b/content/newsletter/011.md
@@ -7,7 +7,7 @@ tags:
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
 **IVOA Newsletter Editors:** Mark G. Allen, Deborah Baines, Sarah Emery Bunn,
-Chenzou Cui, Mark Taylor, & Ivan Zolotukhin.
+Chenzou Cui, Mark Taylor & Ivan Zolotukhin.
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
 with a mission to facilitate the international coordination and collaboration
