Replace floating images with floating side-images in the 25th newsletter

--- a/content/newsletter/025.md
+++ b/content/newsletter/025.md
@@ -39,12 +39,12 @@ upcoming events.
 
 # IVOA NEWS
 
-### 2021 Northern Fall Interoperability Meeting Overview
-Janet Evans, Marco Molinaro and Patrick Dowler
 
-{{< floating right >}}
-![](ivoa_logoc2.jpg)
-{{</ floating >}}
+{{< side-image image="ivoa_logoc2.jpg" position="right" floating="true" >}}
+
+### 2021 Northern Fall Interoperability Meeting Overview
+
+Janet Evans, Marco Molinaro and Patrick Dowler
 
 The Northern Fall Interop meeting was held Nov 02-04, 2021 via Zoom with 182
 registered participants from all around the globe. Interop meetings are held
@@ -103,13 +103,13 @@ Here are several links to get involved:
 | Github            | https://github.com/ivoa           | Collaboration development/new ideas               |
 | Github            | https://github.com/ivoa-std       | Standard document development                     |
 
+{{</ side-image >}}
+
+{{< side-image image="jvo_fitswebql.png" position="left" floating="true" >}}
 
 ### JVO Breaking Through the 1TB Barrier
-Christopher Zapart, Yuji Shirasaki, Masatoshi Ohishi, Yoshihiko Mizumoto
 
-{{< floating left >}}
-![](jvo_fitswebql.png)
-{{</ floating >}}
+Christopher Zapart, Yuji Shirasaki, Masatoshi Ohishi, Yoshihiko Mizumoto
 
 Recently the Japanese Virtual Observatory (JVO) - part of the National
 Astronomical Observatory of Japan - has gained an important new capability.
@@ -127,13 +127,13 @@ by CoArray Fortran & C, then switching over to Julia, and finally turning to
 please visit <https://github.com/jvo203/FITSWEBQLSE> and
 <http://jvo.nao.ac.jp/portal/alma/archive.do>.
 
+{{</ side-image >}}
+
+{{< side-image image="dark_and_quiet_sky.png" position="right" floating="true" >}}
 
 ### VO supports the IAU protection efforts of the Dark and Quiet Sky
-Chenzhou Cui
 
-{{< floating right >}}
-![](dark_and_quiet_sky.png)
-{{</ floating >}}
+Chenzhou Cui
 
 At a press conference on 3 February 2022, the International Astronomical Union
 announced the [selection](https://www.iau.org/news/pressreleases/detail/iau2201)
@@ -163,16 +163,17 @@ SatHub are discussed. SatHub will act as a central virtual clearinghouse and
 repository for the coordination of effort and dissemination of data and
 information.
 
+{{</ side-image >}}
+
 ---
 
 # Schools and workshops
 
-### Second ESCAPE Virtual Observatory School
-Stefania Amodeo
+{{< side-image image="schools_and_workshop.png" position="left" floating="true" >}}
 
-{{< floating left >}}
-![](schools_and_workshop.png)
-{{</ floating >}}
+### Second ESCAPE Virtual Observatory School
+
+Stefania Amodeo
 
 The [ESCAPE](https://projectescape.eu/) project held its second international
 Virtual Observatory (VO) school on February 22-24 and on March 4th 2022. As in
@@ -194,16 +195,17 @@ information on the school, including the tutorial material can be found
 Access more scientific usage tutorials
 [here](https://www.euro-vo.org/scientific-tutorials/).
 
+{{</ side-image >}}
+
 ---
 
 # VO applications and implementation highlights
 
-### MOCs in action for multi-messenger astronomy
-Mark Allen, Giuseppe Greco
+{{< side-image image="mocs_in_action.png" position="right" floating="true" >}}
 
-{{< floating right >}}
-![](mocs_in_action.png)
-{{</ floating >}}
+### MOCs in action for multi-messenger astronomy
+
+Mark Allen, Giuseppe Greco
 
 The IVOA standardised Multi Order Coverage
 ([MOC](https://ivoa.net/documents/MOC/20220125/index.html)) maps offer practical
@@ -218,12 +220,13 @@ and a video demonstration of the workflow which provides the basis of a new
 tutorial in the [Second ESCAPE Virtual Observatory
 School](https://indico.in2p3.fr/event/25225/).
 
-### Multi-messenger astronomy with ESASky
-Deborah Baines
+{{</ side-image >}}
 
-{{< floating left >}}
-![](multi_messenger_in_esasky.png)
-{{</ floating >}}
+{{< side-image image="multi_messenger_in_esasky.png" position="left" floating="true" >}}
+
+### Multi-messenger astronomy with ESASky
+
+Deborah Baines
 
 ESASky is a science-driven discovery portal developed at the European Space
 Agency’s ESAC Science Data Centre that allows the interactive exploration of a
@@ -255,12 +258,13 @@ image and link to the appropriate ESA/Hubble outreach image page.
 **More information:** <https://sky.esa.int> and
 [how to use ESASky](https://www.cosmos.esa.int/web/esdc/esasky-how-to).
 
-### The CEFCA Catalogues Portal VO Services
-Tamara Civera
+{{</ side-image >}}
 
-{{< floating right >}}
-![](cefca_catalogues.png)
-{{</ floating >}}
+{{< side-image image="cefca_catalogues.png" position="right" floating="true" >}}
+
+### The CEFCA Catalogues Portal VO Services
+
+Tamara Civera
 
 The Centro de Estudios de Física del Cosmos de Aragón
 ([CEFCA](https://www.cefca.es/)) is carrying out from the Observatorio
@@ -282,6 +286,8 @@ catalogues portal also offers all this data through Virtual Observatory (VO)
 services like SIAP, SCS, TAP and catalogue and images HIPS.
 
 **More information:** <http://archive.cefca.es>.
+
+{{</ side-image >}}
 
 ---
 
