Replace generic IvoaEvents URL toward interop meetings in the VO Calendar of some news

--- a/content/newsletter/005.md
+++ b/content/newsletter/005.md
@@ -211,7 +211,7 @@ Research Initiative [Fathi et al., MNRAS, 406, 1595, (2010)].
   Exact date & location TBD, more information will appear soon on the EuroVO
   website.
 
-* **May 16-20, 2011** - [IVOA Interoperability Meeting](http://www.ivoa.net/cgi-bin/twiki/bin/view/IVOA/IvoaEvents)
+* **May 16-20, 2011** - [IVOA Interoperability Meeting](https://wiki.ivoa.net/twiki/bin/view/IVOA/InterOpMay2011)
   
   (Naples, Italy)
   
