--- a/content/newsletter/012.md
+++ b/content/newsletter/012.md
@@ -301,7 +301,7 @@ different from that for massive BHs.
 
   (Calgary, Canada)
 
-* **10-12 October 2014 - [IVOA Interoperability Meeting](http://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents)**
+* **10-12 October 2014 - [IVOA Interoperability Meeting](https://wiki.ivoa.net/twiki/bin/view/IVOA/InterOpOct2014)**
 
   (Banff, Alberta, Canada)
 
