Fix incorrect parameter for the 'sup' shortcode: '+"

--- a/content/newsletter/018.md
+++ b/content/newsletter/018.md
@@ -377,7 +377,7 @@ normal single star since it lies too far from massive star forming complexes to
 have arrived at its current position during its lifetime. Our findings therefore
 strengthen the case for this LBV being the result of binary evolution. Of the
 two stars with unusually high proper motions we find that one, the isolated
-B1.5 Ia{{< sup + >}} supergiant Sk-67 2 (HIP 22237), is a candidate
+B1.5 Ia{{< sup "\+" >}} supergiant Sk-67 2 (HIP 22237), is a candidate
 hypervelocity star, the TGAS proper motion implying a very large peculiar
 transverse velocity (360 km s{{< sup -1 >}}) directed radially away from the LMC
 centre. If confirmed, for example by Gaia Data Release 2, it would imply that
