Fix typo in the 1st newsletter

--- a/content/newsletter/001.md
+++ b/content/newsletter/001.md
@@ -71,7 +71,7 @@ the data products from the ESO Public Surveys.
 
 {{</ side-image >}}
  
-### VO-CLI - Command Line Tools for the VOvocli
+### VO-CLI - Command Line Tools for the VO
 
 {{< side-image image="m33_vocli.png" >}}
 
@@ -91,7 +91,7 @@ for novice users or those wishing to experiment.
 {{</ side-image >}}
 
 
-### Large Images in Aladinaladin
+### Large Images in Aladin
 
 {{< side-image image="aladin_small.jpg" >}}
 
