Add a custom IVOA newsletter listing page + Fix date of the some newsletter + Add a `highlights` property to show in the listing page

--- a/content/newsletter/001.md
+++ b/content/newsletter/001.md
@@ -3,6 +3,13 @@ title: "IVOA NEWSLETTER - December 2008"
 date: 2008-12-01T02:01:00+02:00
 tags:
 - news
+highlights:
+- AstroGrid VO Desktop Suite
+- VirGO v1.3.1
+- VO-CLI - Command Line Tools for the VO
+- Large Images in Aladin
+- Some recent papers about VO-enabled science
+- VO calendar
 ---
 
 ### What is the VO?
