--- a/content/newsletter/002.md
+++ b/content/newsletter/002.md
@@ -3,6 +3,16 @@ title: "IVOA NEWSLETTER - May 2009"
 date: 2009-05-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- US-VO Data Discovery Website
+- VisIVO Server: Huge Data Exploration
+- VOPlatform
+- TOPCAT: Does what you want with tables
+- JVO On-Line Mosaicing Service for the SUBARU SuprimeCAM Images
+- VOSpec version 5.0
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 ### What is the VO?
