--- a/content/newsletter/003.md
+++ b/content/newsletter/003.md
@@ -3,6 +3,15 @@ title: "IVOA NEWSLETTER - November 2009"
 date: 2009-11-01T02:01:00+02:00
 tags:
 - news
+highlights:
+- VO Interoperability in DS9
+- SPLAT-VO: Spectral Analysis Tool
+- VirGO - New capabilities for browsing VO resources and more
+- ATPy - VOTables in python
+- Your databases in the VO with Saada
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
