--- a/content/newsletter/004.md
+++ b/content/newsletter/004.md
@@ -3,6 +3,15 @@ title: "IVOA NEWSLETTER - May 2010"
 date: 2010-05-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- Skyalert.org
+- VOSED: SED Building and Fitting Tool
+- The GalMer database -- simulations of galaxies for observers.
+- China-VO Skymouse Client
+- SIMBAD Annotations Service
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
