--- a/content/newsletter/005.md
+++ b/content/newsletter/005.md
@@ -3,6 +3,16 @@ title: "IVOA NEWSLETTER - November 2010"
 date: 2010-11-01T02:01:00+02:00
 tags:
 - news
+highlights:
+- IVOA Science Priorities
+- CDS Portal
+- SAMPy: a Python Module for SAMP Messaging
+- VOSA: VO SED Analyzer
+- WebSampConnector - Stay tuned in to the VO!
+- Aladin 7 Goes "All Sky"
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
