--- a/content/newsletter/006.md
+++ b/content/newsletter/006.md
@@ -3,6 +3,14 @@ title: "IVOA NEWSLETTER - May 2011"
 date: 2011-05-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- Argentina joins the IVOA
+- VODance
+- TOPCAT talks TAP
+- EURO-VO scientific tutorials
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
