--- a/content/newsletter/007.md
+++ b/content/newsletter/007.md
@@ -3,6 +3,16 @@ title: "IVOA NEWSLETTER - October 2011"
 date: 2011-10-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- IVOA Recommendations Available from arXiv & ADS
+- US VAO's Iris SED Analysis Tool
+- VOIPortal
+- VO-India Android application
+- VOPlot v1.7
+- FITSManager
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
