--- a/content/newsletter/008.md
+++ b/content/newsletter/008.md
@@ -3,6 +3,17 @@ title: "IVOA NEWSLETTER - May 2012"
 date: 2012-05-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- Issue dedicated to Dr. Dave De Young
+- US VAO Data Discovery Portal
+- VOSA (VO Sed Analyzer) 3.0
+- US VAO Cross-Comparison Tool
+- VOPlot v1.8 Beta
+- CDS XMatch Service
+- US VAO Time Series Search Tool
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
