--- a/content/newsletter/009.md
+++ b/content/newsletter/009.md
@@ -3,6 +3,17 @@ title: "IVOA NEWSLETTER - October 2012"
 date: 2012-10-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- BRAVO VO School and Brazilian National Astronomy Meeting
+- NASA HEASARC Xamin Catalog & Archive Interface has VO Inside
+- VOSpec version 6.5 - Photometry now in VOSpec!
+- VisIVO Science Gateway
+- TAPHandle: Accessing multiple TAP services from your Browser
+- Taverna looks at the sky
+- AppLauncher and SAMP Become Transparent
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002
