--- a/content/newsletter/010.md
+++ b/content/newsletter/010.md
@@ -3,6 +3,19 @@ title: "IVOA Newsletter - May 2013"
 date: 2013-05-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- New IVOA website
+- VOPlot
+- Aladin lite: a simple visualizer for the browser
+- AstroStat
+- Iris - Added capabilities for SED analysis
+- seleste
+- VO Invades Python!
+- FOREST: a new heliophysics data system
+- Australian All-Sky Virtual Observatory
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
