--- a/content/newsletter/012.md
+++ b/content/newsletter/012.md
@@ -3,6 +3,18 @@ title: "IVOA Newsletter - May 2014"
 date: 2014-05-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- Chilean Virtual Observatory (ChiVO) joins the IVOA
+- Moving forward with Data Standards
+- Theoretical Astrophysical Observatory (TAO)
+- VO Client Release - Access the VO from your desktop
+- Comet, a Python implementation of the VOEvent Transport Protocol
+- TOPCAT Visualisation
+- CASSIS: Version 3.6.1 released
+- ETC-42
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
