--- a/content/newsletter/013.md
+++ b/content/newsletter/013.md
@@ -3,6 +3,19 @@ title: "IVOA Newsletter - Octobre 2014"
 date: 2014-10-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- Beyond the US VAO project
+- Three more VO schools in Spain
+- First SVO workshop on data publishing
+- Moving forward with Data Standards
+- Argentina Virtual Observatory's Data Center
+- Stat-Lite - an Android Application
+- Upgrades to the US VAO registry at STScI
+- TOPCAT and CDS X-Match
+- US VAO Data Discovery Tool: Version 1.7 released
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
