--- a/content/newsletter/015.md
+++ b/content/newsletter/015.md
@@ -3,6 +3,18 @@ title: "IVOA Newsletter - October 2015"
 date: 2015-10-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- China-VO enabled Popular Supernova Project
+- ASTERICS Virtual Observatory School
+- WWT Guided Tour Design Competition
+- ESA Sky: the ESA Astronomy Multi-Mission Interface
+- The Keck Observatory Archive
+- TAO v2.0: The Theoretical Astrophysical Observatory
+- TOPCAT TAP Improvements
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
