--- a/content/newsletter/016.md
+++ b/content/newsletter/016.md
@@ -3,6 +3,21 @@ title: "IVOA Newsletter - December 2016"
 date: 2016-12-01T02:01:00+02:00
 tags:
 - news
+highlights:
+- Gaia in the VO
+- Gaia DR1 at ESA, CDS and ARI
+- Aliyun becomes strategic partner of the China-VO
+- Virtual Observatory India News
+- Schools and Workshops
+- APOGEO (Automatic POrtal GEneratOr)
+- CASSIS New Release
+- Gaia Photometric Science Alerts at Institute of Astronomy, Cambridge (UK)
+- Iris 3.0 beta Release
+- VOSA New Release
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
