--- a/content/newsletter/017.md
+++ b/content/newsletter/017.md
@@ -3,6 +3,20 @@ title: "IVOA Newsletter - June 2017"
 date: 2017-06-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- IAU Working Group on Data Driven Astronomy Education and Public Outreach (DAEPO)
+- Shanghai IVOA Interoperability Meeting
+- Scientific Tutorials
+- Solar System in the VO
+- Schools and Workshops
+- Automatic composition of astrophysical services
+- New version of CDS Portal
+- Clusterix
+- ESASky: A science-driven discovery portal for space astronomy data
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
