--- a/content/newsletter/018.md
+++ b/content/newsletter/018.md
@@ -3,6 +3,21 @@ title: "IVOA Newsletter - December 2017"
 date: 2017-12-01T02:01:00+02:00
 tags:
 - news
+highlights:
+- The Santiago de Chile IVOA meeting
+- IVOA Slack workspace
+- DAEPO BoF Session at ADASS
+- Schools and Workshops
+- Aladin Desktop V10
+- ESASky v2.0
+- Introducing AAO Data Central
+- Interoperable geographycally distributed VOSpaces
+- Solar Survey at Pic du Midi Observatory
+- TOPCAT v4.5
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
