--- a/content/newsletter/019.md
+++ b/content/newsletter/019.md
@@ -3,6 +3,19 @@ title: "IVOA Newsletter - August 2018"
 date: 2018-08-01T00:01:00+02:00
 tags:
 - news
+highlights:
+- Gaia DR2 and the VO: A two-way success story
+- IVOA meeting in Victoria, BC, Canada
+- Schools and Workshops
+- Chandra Source Catalog (CSC 2.0)
+- Chandra adoption of Multi-Order Coverage maps (MOCs)
+- Gaia DR2 in CDS Services
+- HIPASS legacy data set now available through ASKAP’s new archive facility
+- VOSA New Release and Gaia DR2
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
