--- a/content/newsletter/025.md
+++ b/content/newsletter/025.md
@@ -3,6 +3,18 @@ title: "IVOA Newsletter - March 2022"
 date: 2022-03-01T10:58:36+02:00
 tags:
 - news
+highlights:
+- Northern Fall Interoperability Meeting Overview
+- JVO Breaking Through the 1TB Barrier
+- VO supports the IAU protection efforts of the Dark and Quiet Sky
+- Schools And Workshops
+- MOCs in action for multi-messenger astronomy
+- Multi-messenger astronomy with ESASky
+- The CEFCA Catalogues Portal VO Services
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) |
