--- a/content/newsletter/020.md
+++ b/content/newsletter/020.md
@@ -3,6 +3,16 @@ title: "IVOA Newsletter - January 2019"
 date: 2019-01-01T02:00:00+02:00
 tags:
 - news
+highlights:
+- College Park IVOA Interoperability Meeting
+- Schools and Workshops
+- ESASky v3.0
+- SkyMapper VO Services
+- Telescope Access Program proposal submission and data archiving supported by the China-VO
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
