--- a/content/newsletter/021.md
+++ b/content/newsletter/021.md
@@ -3,6 +3,17 @@ title: "IVOA Newsletter - September 2019"
 date: 2019-09-01T02:00:00+02:00
 tags:
 - news
+highlights:
+- IVOA Interoperability meeting in Paris, France
+- A search engine for the IVOA documentation.
+- Creating High Quality HiPS Visualizations With Montage
+- Exo-MerCat, a VO-aware exoplanet catalog
+- LAMOST Releases the Fifth Data Release (DR5) Internationally
+- pyESASky: An ESASky widget for Jupyter
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
