--- a/content/newsletter/023.md
+++ b/content/newsletter/023.md
@@ -3,6 +3,16 @@ title: "IVOA Newsletter - February 2021"
 date: 2021-02-01T02:00:00+02:00
 tags:
 - news
+highlights:
+- The International Virtual Observatory Alliance in 2020
+- Northern Fall Interoperability Meeting Overview
+- Schools and Workshops
+- Gaia Early Data Release 3 available through VO applications
+- nexsciTAP version 1.0
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
