--- a/content/newsletter/024.md
+++ b/content/newsletter/024.md
@@ -3,6 +3,15 @@ title: "IVOA Newsletter - July 2021"
 date: 2021-07-01T02:00:00+02:00
 tags:
 - news
+highlights:
+- Northern Fall Interoperability Meeting Overview
+- Schools and Workshops
+- TAP Service at the NASA Exoplanet Archive
+- VO standards-based Metadata Management and Data Submission System of NADC
+- Featured Science Publication
+- Featured Paper
+- Refereed Publications
+- VO calendar
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) | [Newsletter archives](http://www.ivoa.net/newsletter/) | [Write to the editors](mailto:ivoa-news-editors@ivoa.net)  
