iss101 Updated styles for the newsletter

--- a/content/newsletter/025.md
+++ b/content/newsletter/025.md
@@ -52,7 +52,9 @@ upcoming events.
 # IVOA NEWS
 
 
-{{< side-image image="ivoa_logoc2.jpg" position="right" floating="true" >}}
+{{< side-image image="ivoa_logoc2.jpg" position="right"
+floating="true"
+alt="IVOA Logo" >}}
 
 ### 2021 Northern Fall Interoperability Meeting Overview
 
@@ -65,7 +67,7 @@ global pandemic. Sessions were recorded and posted so that if you missed a
 session you can go back and view it. Here is the
 [link](https://www.canfar.net/storage/list/pdowler/ivoa/virtual2021b) if you are
 interested in session videos.
-
+{{</ side-image >}}
 The sessions were led by the IVOA Working Groups (WG) and Interest Groups (IG)
 and focused on core topics related to status and discussion of current group
 efforts. Community presentations were solicited and folded into sessions to
@@ -104,7 +106,7 @@ extension. Members of the astronomical community are welcome to get involved in
 the IVOA and to consider a role in the TCG.
 
 Here are several links to get involved:
-
+{{<my-table>}}
 | Name              | URL                               | Description                                       |
 | ----------------- | --------------------------------- | ------------------------------------------------- |
 | IVOA Website      | https://www.ivoa.net/             | Place to start                                    |
@@ -115,8 +117,8 @@ Here are several links to get involved:
 | Github            | https://github.com/ivoa           | Collaboration development/new ideas               |
 | Github            | https://github.com/ivoa-std       | Standard document development                     |
 
-{{</ side-image >}}
 
+{{</my-table>}}
 {{< side-image image="jvo_fitswebql.png" position="left" floating="true" >}}
 
 ### JVO Breaking Through the 1TB Barrier
@@ -128,7 +130,7 @@ Astronomical Observatory of Japan - has gained an important new capability.
 Using a 28 CPU-core Mac Pro workstation equipped with 1.5TB of RAM and running a
 normal production version of Rust FITSWebQL v4, they have demonstrated a smooth
 real-time preview of a 1.3TiB-large FITS file. FITSWebQL calculates in real-time
-the "-1" and "0" moments for FITS data cubes, which places extra stress on the
+the "-1" and "0" moments for FITS data cubes, which places extra stress on the{{</ side-image >}}
 server memory and CPU. In addition to the stable FITSWebQL v4, work is
 progressing on the distributed-computing FITSWEBQL v5 Supercomputer Edition,
 with the aim to offer in real-time selected higher moments too. In a quest to
@@ -139,7 +141,7 @@ by CoArray Fortran & C, then switching over to Julia, and finally turning to
 please visit <https://github.com/jvo203/FITSWEBQLSE> and
 <http://jvo.nao.ac.jp/portal/alma/archive.do>.
 
-{{</ side-image >}}
+
 
 {{< side-image image="dark_and_quiet_sky.png" position="right" floating="true" >}}
 
@@ -148,7 +150,7 @@ please visit <https://github.com/jvo203/FITSWEBQLSE> and
 Chenzhou Cui
 
 At a press conference on 3 February 2022, the International Astronomical Union
-announced the [selection](https://www.iau.org/news/pressreleases/detail/iau2201)
+announced the [selection](https://www.iau.org/news/pressreleases/detail/iau2201){{</ side-image >}}
 of the SKA Observatory (SKAO) and NSF’s NOIRLab as co-hosts of the new IAU
 Centre for the Protection of the Dark and Quiet Sky from Satellite Constellation
 Interference. The Centre coordinates collaborative multidisciplinary
@@ -175,7 +177,7 @@ SatHub are discussed. SatHub will act as a central virtual clearinghouse and
 repository for the coordination of effort and dissemination of data and
 information.
 
-{{</ side-image >}}
+
 
 ---
 
@@ -192,7 +194,7 @@ Virtual Observatory (VO) school on February 22-24 and on March 4th 2022. As in
 the previous schools organised by the Euro-VO initiative, the goal was to
 promote and enhance the VO as framework to exploit the huge amount of data
 provided by the ever-growing number of ground-based and space facilities, as
-well as to gather requirements and feedback from the participants. VO experts
+well as to gather requirements and feedback from the participants. {{</ side-image >}}VO experts
 gave hands-on tutorials on the usage of VO tools and services in “real life”
 examples of scientific applications, including the exploration of large
 catalogues like Gaia, cross-matching of big survey data, exploration of
@@ -207,7 +209,7 @@ information on the school, including the tutorial material can be found
 Access more scientific usage tutorials
 [here](https://www.euro-vo.org/scientific-tutorials/).
 
-{{</ side-image >}}
+
 
 ---
 
@@ -223,7 +225,7 @@ The IVOA standardised Multi Order Coverage
 ([MOC](https://ivoa.net/documents/MOC/20220125/index.html)) maps offer practical
 ways to manage complex regions of the sky. In a new Astronomy and Computing
 paper, "Multi Order Coverage data structure to plan multi-messenger
-observations” [Greco et al. 2022](https://doi.org/10.1016/j.ascom.2022.100547)
+observations” [Greco et al. 2022](https://doi.org/10.1016/j.ascom.2022.100547){{</ side-image >}}
 presents an application of MOC, in combination with the astroplan observation
 planning package to enable the efficient computation of sky regions and the
 visibility of these regions from a specific location on the Earth at a
@@ -232,7 +234,7 @@ and a video demonstration of the workflow which provides the basis of a new
 tutorial in the [Second ESCAPE Virtual Observatory
 School](https://indico.in2p3.fr/event/25225/).
 
-{{</ side-image >}}
+
 
 {{< side-image image="multi_messenger_in_esasky.png" position="left" floating="true" >}}
 
@@ -249,7 +251,7 @@ gravitational wave (GW) event probability maps on the sky, allowing users to
 look for electromagnetic counterparts for the GW events and using ESASky to
 quickly access all available archival electromagnetic data. Near future releases
 intend on expanding the multi-messenger feature and include, for example, the
-IceCube neutrino footprint.
+IceCube neutrino footprint.{{</ side-image >}}
 
 Additionally, the latest releases of ESASky have increased the amount of science
 ready data accessible through the tool. These include: all public CHEOPS
@@ -270,7 +272,7 @@ image and link to the appropriate ESA/Hubble outreach image page.
 **More information:** <https://sky.esa.int> and
 [how to use ESASky](https://www.cosmos.esa.int/web/esdc/esasky-how-to).
 
-{{</ side-image >}}
+
 
 {{< side-image image="cefca_catalogues.png" position="right" floating="true" >}}
 
@@ -285,7 +287,7 @@ large area multiband photometric sky surveys, [J-PLUS](https://www.j-plus.es/),
 and [J-PAS](https://www.j-pas.org/), covering the entire optical spectrum using
 narrow and broad band filters. J-PAS and J-PLUS include coadded and individual
 frame images, dual and single catalogue data generated from coadded images, and
-photo-redshift computations.
+photo-redshift computations.{{</ side-image >}}
 
 All this survey data (at the present moment, J-PLUS DR1 and DR2 and MiniJ-PAS
 PDR201912) is offered through the CEFCA Catalogues portal which provides
@@ -299,7 +301,7 @@ services like SIAP, SCS, TAP and catalogue and images HIPS.
 
 **More information:** <http://archive.cefca.es>.
 
-{{</ side-image >}}
+
 
 ---
 
