Testing update of newsletter 026

--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -41,10 +41,11 @@ upcoming events.
 
 # IVOA NEWS
 
+{{< side-image image="ivoa_logoc2.jpg" position="right"
+floating="true"
+alt="IVOA Logo" >}}
 
-{{< side-image image="" thumbnail="" position="left" floating="true" >}}
-
-### { TBD - TITLE }
+### { 2024 Northern Fall Interoperability Meeting Overview }
 
 { TBD - Comma-separated list of authors }
 
@@ -54,6 +55,7 @@ upcoming events.
 
 ---
 
+<!--Not for this short newsletter - REMOVE THIS SECTION
 # Schools and workshops
 
 {{< side-image image="" thumbnail="" position="right" floating="true" >}}
@@ -66,8 +68,11 @@ upcoming events.
 
 {{</ side-image >}}
 
----
 
+---   
+-->
+
+<!--Not for this short newsletter - REMOVE THIS SECTION
 # VO applications and implementation highlights
 
 {{< side-image image="" thumbnail="" position="left" floating="true" >}}
@@ -83,6 +88,7 @@ upcoming events.
 {{</ side-image >}}
 
 ---
+-->
 
 # Some recent papers about VO-enabled science
 
