--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -1,10 +1,10 @@
 ---
+title: "IVOA Newsletter - May 2025"
 date: '2025-03-30T19:03:57-05:00'
-ideal_title: "IVOA Newsletter - { TBD - Date as 'Month Year' }"
 tags:
 - news
 highlights:
-- { TBD - One highlighted fact per line, prefixed as here with a '- ' }
+- 2024 Northern Fall Interoperability Meeting Overview
 ---
 
 [Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) |
@@ -45,13 +45,37 @@ upcoming events.
 floating="true"
 alt="IVOA Logo" >}}
 
-### { 2024 Northern Fall Interoperability Meeting Overview }
+
+### 2024 Northern Fall Interoperability Meeting Overview
 
 { TBD - Comma-separated list of authors }
 
-{ TBD - Content }
-
+The 2024 Northern Fall Interop meeting was held 15 - 17 November 2024 at the University of Malta, Valletta. With ##?
+registered participants in person and online from all around the globe. Interop meetings are held
+every ∼6 months. Sessions were recorded and posted so that if you missed a
+session you can go back and view it. Here is the
+[link](https://www.canfar.net/storage/vault/list/IVOA/malta2024b) if you are
+interested in session videos.
 {{</ side-image >}}
+The sessions were led by the IVOA Working Groups (WG) and Interest Groups (IG)
+and focused on core topics related to .
+
+Here are several links to get involved:
+{{<my-table>}}
+| Name              | URL                               | Description                                       |
+| ----------------- | --------------------------------- | ------------------------------------------------- |
+| IVOA Website      | https://www.ivoa.net/             | Place to start                                    |
+| IVOA Wiki pages   | https://wiki.ivoa.net/            | Collaboration area                                |
+| Main Mailing List | interop 'at' ivoa.net             | IVOA community list                               |
+| All Mailing Lists | https://www.ivoa.net/members/     | Identifies email lists for all WG/IG, CSP & Exec. |
+| Slack             | https://ivoa.slack.com/           | Collaboration slack channel                       |
+| Github            | https://github.com/ivoa           | Collaboration development/new ideas               |
+| Github            | https://github.com/ivoa-std       | Standard document development                     |
+
+
+{{</my-table>}}
+{{< side-image image="jvo_fitswebql.png" position="left" floating="true" >}}
+
 
 ---
 
@@ -92,9 +116,11 @@ alt="IVOA Logo" >}}
 
 # Some recent papers about VO-enabled science
 
+<!--2024ApJS..271...55K   The Initial Mass Function Based on the Full-sky 20 pc Census of ∼3600 Stars and Brown Dwarfs  Use of VO tools: VOSA, SIMBAD, Vizier. Was published in April 2024, Has 43 citations in March 2025. ** I also like this one- or prefer this one! It uses VOSA whereas the above only lists all tools used by the whole of DPAC (not necessarily for th especific paper, or it's not obvious) -->
+
 ### Featured Science Publication
 
-_{ TBD - Publication title }_
+_The Initial Mass Function Based on the Full-sky 20 pc Census of ∼3600 Stars and Brown Dwarfs_
 
 **{ TBD - Comma-separated list of authors }**
 
@@ -104,11 +130,10 @@ _{ TBD - Where is it published? }_
 
 DOI: { TBD - DOI (e.g. [10.1093/mnras/stab1242](https://doi.org/10.1093/mnras/stab1242) ) }
 
-### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=07&y_in=2020&m_en=01&y_en=2021&submit=Submit) { TBD - Check the parameters of this URL }
+### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit) { TBD - Check the parameters of this URL }
 
-The full list of refereed publications from { TBD - Date as "Month Year" } to { TBD - Date as "Month Year" } can be
-found at the following
-[list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=09&y_in=2021&m_en=03&y_en=2022&submit=Submit),
+The full list of refereed publications from April 2022 to May 2025 can be found at the following
+[list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit),
 curated by the Spanish Virtual Observatory.
 
 ### More Ways to Find VO-related Publications
@@ -123,11 +148,64 @@ mentioning the "virtual observatory" in the abstract.
 
 ## VO calendar
 
-* **{ TBD - Date as: Day Month Year } - { TBD - Event name }**
+* **1 - 6 June 2025 - IVOA Interoperability Meeting**
   
-  ({ TBD - Location (e.g. 'online', or a city and country) })
+  (College Park, Maryland, USA)
 
-  { TBD - Description }
+  The International Virtual Observatory Alliance (IVOA) semi-annual
+  Interoperability meetings provide an opportunity for discussion and
+  development of virtual observatory standards and VO-based applications, and
+  are open to those with an interest in utilizing the VO infrastructure and
+  tools in support of observatory operations and/or astronomical research. The 
+  Northern Spring 2025 IVOA Interoperability meeting will be hosted at the Edward 
+  St. John Learning & Teaching Center at the University of Maryland from Monday 
+  June 2 to Friday June 6, 2025. The meeting is financially supported by NAVO, 
+  the NASA Astronomical Virtual Observatories, and University of Maryland. 
+  We also acknowledge support from the Space Telescope Science Institute, 
+  NASA ACROSS and the Joint Space-Science Institute. The meeting will be organised 
+  in person and with the possibility to follow the main sessions remotely.
 
+* **8 - 12 June 2025 - 246th AAS Meeting**
+  
+  (Anchorage, Alaska, USA)
+  
+  The American Astronomical Society (AAS) meetings serve as a venue for the
+  general astronomical community to gather and discuss the latest science,
+  tools, and technologies in astronomy. VO-related sessions and exhibits will be
+  held during the meeting, including presentations from international VO
+  partners, open to all astronomers. IVOA affiliated institutions will have
+  booths in the exhibition hall throughout the week, demonstrating tools and
+  services such as the NASA Astrophysics Data System, SciServer, VizieR, and
+  other VO data access interfaces. Attendees may learn more about the data and
+  services provided by those institutions, and have face-to-face discussions
+  with developers.
+
+* **23 - 27 June 2025 - EAS Annual Meeting 2025**
+  
+  (University College Cork, Ireland)
+  
+  The European Astronomical Society (EAS) Annual Meeting (formerly known as
+  EWASS, and earlier JENAM) has more than 30 years of tradition and it has
+  imposed itself as the largest conference for European astronomy. In addition
+  to plenary sessions and the award of prestigious prizes, the conference hosts
+  many symposia held in parallel, as well as special sessions and meetings. IVOA
+  affiliated institutions will have booths in the exhibition hall throughout the
+  week, demonstrating tools and services such as CDS's VizieR and Aladin, ESO
+  tools and services, ESA archives, and other VO data access interfaces.
+  Attendees may learn more about the data and services provided by these
+  institutions and have face-to-face discussions with scientists and developers.
+
+* **9 - 13 November 2025 - ADASS XXXV**
+  
+  (Goerlitz, Germany)
+  
+  This annual Astronomical Data Analysis Software and Systems (ADASS)
+  conference, held in a different location each year, is a forum for
+  astronomers, computer scientists, software engineers, faculty members and
+  students working in areas related to algorithms, software and systems for the
+  acquisition, reduction, analysis, and dissemination of astronomical data. The
+  ADASS XXXV program will include invited talks, contributed papers, display
+  sessions, tutorials, computer demonstrations, and special interest ("Birds of
+  a Feather" or BoF) meetings.
 
 {{< newsletter-social-links >}}
