--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -116,19 +116,17 @@ Here are several links to get involved:
 
 # Some recent papers about VO-enabled science
 
-<!--2024ApJS..271...55K   The Initial Mass Function Based on the Full-sky 20 pc Census of ∼3600 Stars and Brown Dwarfs  Use of VO tools: VOSA, SIMBAD, Vizier. Was published in April 2024, Has 43 citations in March 2025. ** I also like this one- or prefer this one! It uses VOSA whereas the above only lists all tools used by the whole of DPAC (not necessarily for th especific paper, or it's not obvious) -->
-
 ### Featured Science Publication
 
 _The Initial Mass Function Based on the Full-sky 20 pc Census of ∼3600 Stars and Brown Dwarfs_
 
-**{ TBD - Comma-separated list of authors }**
+**Kirkpatrick, J. Davy et al.**
 
-_{ TBD - Where is it published? }_
+_The Astrophysical Journal Supplement Series, Volume 271, 55_
 
-{ TBD - Abstract }
+A complete accounting of nearby objects—from the highest-mass white dwarf progenitors down to low-mass brown dwarfs—is now possible, thanks to an almost complete set of trigonometric parallax determinations from Gaia, ground-based surveys, and Spitzer follow-up. We create a census of objects within a Sun-centered sphere of 20 pc radius and check published literature to decompose each binary or higher-order system into its separate components. The result is a volume-limited census of ∼3600 individual star formation products useful in measuring the initial mass function across the stellar (<8M ⊙) and substellar (≳5M Jup) regimes. Comparing our resulting initial mass function to previous measurements shows good agreement above 0.8M ⊙ and a divergence at lower masses. Our 20 pc space densities are best fit with a quadripartite power law,  ξ(M)=dN/dM∝M−α , with long-established values of α = 2.3 at high masses (0.55 < M < 8.00M ⊙), and α = 1.3 at intermediate masses (0.22 < M < 0.55M ⊙), but at lower masses, we find α = 0.25 for 0.05 < M < 0.22M ⊙, and α = 0.6 for 0.01 < M < 0.05M ⊙. This implies that the rate of production as a function of decreasing mass diminishes in the low-mass star/high-mass brown dwarf regime before increasing again in the low-mass brown dwarf regime. Correcting for completeness, we find a star to brown dwarf number ratio of, currently, 4:1, and an average mass per object of 0.41 M ⊙.
 
-DOI: { TBD - DOI (e.g. [10.1093/mnras/stab1242](https://doi.org/10.1093/mnras/stab1242) ) }
+DOI: [10.3847/1538-4365/ad24e2](https://doi.org/10.3847/1538-4365/ad24e2) 
 
 ### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit) { TBD - Check the parameters of this URL }
 
